# otadrive_esp_idf

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
examples/esp_ghota_example/: CMakeLists.txt  sdkconfig.defaults
examples/esp_ghota_example/main/: idf_component.yml  main.c
examples/simple_example/: CMakeLists.txt  sdkconfig.old
examples/simple_example/main/: CMakeLists.txt  idf_component.yml  simple_example.c
include/: otadrive_esp.h  otd_common.h  otd_privates.h
src/: conf.c  misc.c  otadrive_esp.c
